--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,8 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+
     }
     buildTypes {
         release {
@@ -22,6 +24,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
@@ -37,10 +40,10 @@ dependencies {
     compile "com.squareup.retrofit2:converter-gson:$rootProject.retrofitVersion"
     compile "com.squareup.okhttp3:okhttp:$rootProject.OkHttpVersion"
     compile "com.squareup.okhttp3:logging-interceptor:$rootProject.OkHttpVersion"
+    compile "com.squareup.sqlbrite:sqlbrite:$rootProject.sqlbriteVersion"
     //rx dependencies
     compile "io.reactivex:rxandroid:$rootProject.rxandroidVersion"
     compile "io.reactivex:rxjava:$rootProject.rxjavaVersion"
-
     //fresco
     compile "com.facebook.fresco:fresco:$rootProject.frescoVersion"
     compile "com.facebook.fresco:imagepipeline-okhttp3:0.12.0+"
