--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0-alpha7'
+        classpath 'com.android.tools.build:gradle:2.2.0-beta2'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -27,6 +27,7 @@ ext {
     supportVersion = '24.0.0-beta1'
     daggerVersion = '2.6'
     OkHttpVersion = '3.4.1'
+    sqlbriteVersion = '0.7.0'
     retrofitVersion = '2.1.0'
     rxandroidVersion = '1.2.0'
     rxjavaVersion = '1.1.5'
