--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0-beta2'
+        classpath 'com.android.tools.build:gradle:2.2.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -24,7 +24,7 @@ task clean(type: Delete) {
 
 
 ext {
-    supportVersion = '24.0.0-beta1'
+    supportVersion = '24.2.0'
     daggerVersion = '2.6'
     OkHttpVersion = '3.4.1'
     retrofitVersion = '2.1.0'
